Fix #26760 - [Bug] Fixx css in project gantt view

--- a/becpg-project/becpg-project-share/src/main/assembly/web/components/project/project-list.css
+++ b/becpg-project/becpg-project-share/src/main/assembly/web/components/project/project-list.css
@@ -121,9 +121,9 @@
 }
 
 
-.project-list .projects .yui-dt-data td.ghead,
-.project-list .projects .yui-dt-data td.gheadwkend {
-	padding: 0px;
+
+.project-list .projects.gantt .yui-dt-data td {
+    padding: 0px;
 }
 
 .project-list .projects .yui-dt-data .yui-dt-last td {
