--- a/becpg-project/becpg-project-share/src/main/resources/alfresco/forms/becpg-survey-form-config.xml
+++ b/becpg-project/becpg-project-share/src/main/resources/alfresco/forms/becpg-survey-form-config.xml
@@ -323,6 +323,7 @@
 			</form>
 			<form id="datagrid">
 				<field-visibility>
+				    <show id="bcpg:sort" />
 					<show id="bcpg:depthLevel" />
 					<show id="bcpg:code" />
 					<show id="survey:questionLabel" />
