--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -1706,6 +1706,7 @@
 					<show id="bcpg:charactName" />
 					<show id="bcpg:toxTypes" />
 					<show id="bcpg:toxValue" />
+					<show id="bcpg:toxAbsorptionType" force="true" />
 					<show id="bcpg:toxCalculateSystemic" />
 					<show id="bcpg:toxCalculateMax" />
 					<show id="sec:readGroups" force="true" />
@@ -1719,6 +1720,7 @@
 					<show id="bcpg:charactName" />
 					<show id="bcpg:toxTypes" />
 					<show id="bcpg:toxValue" />
+					<show id="bcpg:toxAbsorptionType" force="true" />
 					<show id="bcpg:toxCalculateSystemic" />
 					<show id="bcpg:toxCalculateMax" />
 					<show id="sec:readGroups" force="true" />
@@ -1731,6 +1733,9 @@
 					</field>
 					<field id="bcpg:isDeleted">
 						<control template="/org/alfresco/components/form/controls/boolean.ftl" />
+					</field>
+					<field id="bcpg:toxAbsorptionType" >
+						<control template="/org/alfresco/components/form/controls/selectone.ftl" />
 					</field>
 					<field id="bcpg:toxCalculateSystemic">
 						<control template="/org/alfresco/components/form/controls/boolean.ftl">
@@ -1765,6 +1770,7 @@
 					<show id="bcpg:charactName" />
 					<show id="bcpg:toxTypes" />
 					<show id="bcpg:toxValue" />
+					<show id="bcpg:toxAbsorptionType" force="true" />
 					<show id="bcpg:toxCalculateSystemic" />
 					<show id="bcpg:toxCalculateMax" />
 					<show id="sec:readGroups" force="true" />
@@ -1782,12 +1788,18 @@
 					<show id="bcpg:charactName" />
 					<show id="bcpg:toxTypes" />
 					<show id="bcpg:toxValue" />
+					<show id="bcpg:toxAbsorptionType" force="true" />
 					<show id="bcpg:toxCalculateSystemic" />
 					<show id="bcpg:toxCalculateMax" />
 					<show id="sec:readGroups" force="true" />
 					<show id="bcpg:erpCode" force="true" />
 					<show id="bcpg:isDeleted" />
 				</field-visibility>
+				<appearance>
+					<field id="bcpg:toxAbsorptionType" set="toxTab" >
+						<control template="/org/alfresco/components/form/controls/selectone.ftl" />
+					</field>
+				</appearance>
 			</form>
 		</forms>
 	</config>
@@ -1866,72 +1878,6 @@
 		</forms>
 	</config>
 	
-	
-	<config evaluator="model-type" condition="bcpg:tox">
-		<forms>
-			<form>
-				<field-visibility>
-					<show id="bcpg:charactName" />
-					<show id="bcpg:toxTypes" />
-					<show id="bcpg:toxValue" />
-					<show id="bcpg:toxCalculateSystemic" />
-					<show id="sec:readGroups" force="true" />
-					<show id="bcpg:erpCode" force="true" />
-					<show id="bcpg:isDeleted" />
-				</field-visibility>
-			</form>
-
-			<form id="filter">
-				<field-visibility>
-					<show id="bcpg:charactName" />
-					<show id="bcpg:toxTypes" />
-					<show id="bcpg:toxValue" />
-					<show id="bcpg:toxCalculateSystemic" />
-					<show id="sec:readGroups" force="true" />
-					<show id="bcpg:erpCode" force="true" />
-					<show id="bcpg:isDeleted" />
-				</field-visibility>
-				<appearance>
-					<field id="bcpg:charactName">
-						<control template="/org/alfresco/components/form/controls/textfield.ftl" />
-					</field>
-					<field id="bcpg:isDeleted">
-						<control template="/org/alfresco/components/form/controls/boolean.ftl" />
-					</field>
-				</appearance>
-			</form>
-
-			<form id="datagrid">
-				<field-visibility>
-					<show id="bcpg:charactName" />
-					<show id="bcpg:toxTypes" />
-					<show id="bcpg:toxValue" />
-					<show id="bcpg:toxCalculateSystemic" />
-					<show id="sec:readGroups" force="true" />
-					<show id="bcpg:erpCode" force="true" />
-					<show id="bcpg:isDeleted" />
-				</field-visibility>
-			</form>
-		</forms>
-	</config>
-	
-	<config evaluator="node-type" condition="bcpg:tox">
-		<forms>
-			<form>
-				<field-visibility>
-					<show id="bcpg:charactName" />
-					<show id="bcpg:toxTypes" />
-					<show id="bcpg:toxValue" />
-					<show id="bcpg:toxCalculateSystemic" />
-					<show id="sec:readGroups" force="true" />
-					<show id="bcpg:erpCode" force="true" />
-					<show id="bcpg:isDeleted" />
-				</field-visibility>
-			</form>
-		</forms>
-	</config>
-	
-	
     <!-- bcpg:ing type (existing nodes) -->
 	<config evaluator="node-type" condition="bcpg:ing">
 		<forms>
@@ -1962,6 +1908,7 @@
 					<show id="bcpg:svhcReasonsForInclusion" force="true" />
 					<show id="bcpg:ingToxPodSystemic" force="true" />
 					<show id="bcpg:ingToxDermalAbsorption" force="true" />
+					<show id="bcpg:ingToxOralAbsorption" force="true" />
 					<show id="bcpg:ingToxMosMoe" force="true" />
 					<show id="bcpg:ingToxMaxSkinIrritationRinseOff" force="true" />
 					<show id="bcpg:ingToxMaxSkinIrritationLeaveOn" force="true" />
@@ -2032,6 +1979,7 @@
 					<field id="bcpg:svhcReasonsForInclusion" set="formulation" />
 					<field id="bcpg:ingToxPodSystemic" set="toxTab" />
 					<field id="bcpg:ingToxDermalAbsorption" set="toxTab" />
+					<field id="bcpg:ingToxOralAbsorption" set="toxTab" />
 					<field id="bcpg:ingToxMosMoe" set="toxTab" />
 					<field id="bcpg:ingToxMaxSkinIrritationRinseOff" set="toxTab" />
 					<field id="bcpg:ingToxMaxSkinIrritationLeaveOn" set="toxTab" />
@@ -2074,6 +2022,7 @@
 					<show id="bcpg:svhcReasonsForInclusion" force="true" />
 					<show id="bcpg:ingToxPodSystemic" force="true" />
 					<show id="bcpg:ingToxDermalAbsorption" force="true" />
+					<show id="bcpg:ingToxOralAbsorption" force="true" />
 					<show id="bcpg:ingToxMosMoe" force="true" />
 					<show id="bcpg:ingToxMaxSkinIrritationRinseOff" force="true" />
 					<show id="bcpg:ingToxMaxSkinIrritationLeaveOn" force="true" />
@@ -2144,6 +2093,7 @@
 					<field id="bcpg:svhcReasonsForInclusion" set="formulation" />
 					<field id="bcpg:ingToxPodSystemic" set="toxTab" />
 					<field id="bcpg:ingToxDermalAbsorption" set="toxTab" />
+					<field id="bcpg:ingToxOralAbsorption" set="toxTab" />
 					<field id="bcpg:ingToxMosMoe" set="toxTab" />
 					<field id="bcpg:ingToxMaxSkinIrritationRinseOff" set="toxTab" />
 					<field id="bcpg:ingToxMaxSkinIrritationLeaveOn" set="toxTab" />
