--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-form-config.xml
@@ -1720,6 +1720,7 @@
 					<show id="bcpg:charactName" />
 					<show id="bcpg:toxTypes" />
 					<show id="bcpg:toxValue" />
+					<show id="bcpg:toxAbsorptionType" force="true" />
 					<show id="bcpg:toxCalculateSystemic" />
 					<show id="bcpg:toxCalculateMax" />
 					<show id="sec:readGroups" force="true" />
@@ -1733,6 +1734,7 @@
 					<show id="bcpg:charactName" />
 					<show id="bcpg:toxTypes" />
 					<show id="bcpg:toxValue" />
+					<show id="bcpg:toxAbsorptionType" force="true" />
 					<show id="bcpg:toxCalculateSystemic" />
 					<show id="bcpg:toxCalculateMax" />
 					<show id="sec:readGroups" force="true" />
@@ -1747,6 +1749,9 @@
 						<control template="/org/alfresco/components/form/controls/boolean.ftl">
 							<control-param name="isSearch">true</control-param>
 						</control>
+					</field>
+					<field id="bcpg:toxAbsorptionType" >
+						<control template="/org/alfresco/components/form/controls/selectone.ftl" />
 					</field>
 					<field id="bcpg:toxCalculateSystemic">
 						<control template="/org/alfresco/components/form/controls/boolean.ftl">
@@ -1771,6 +1776,7 @@
 					<show id="bcpg:charactName" />
 					<show id="bcpg:toxTypes" />
 					<show id="bcpg:toxValue" />
+					<show id="bcpg:toxAbsorptionType" force="true" />
 					<show id="bcpg:toxCalculateSystemic" />
 					<show id="bcpg:toxCalculateMax" />
 					<show id="sec:readGroups" force="true" />
@@ -1788,12 +1794,18 @@
 					<show id="bcpg:charactName" />
 					<show id="bcpg:toxTypes" />
 					<show id="bcpg:toxValue" />
+					<show id="bcpg:toxAbsorptionType" force="true" />
 					<show id="bcpg:toxCalculateSystemic" />
 					<show id="bcpg:toxCalculateMax" />
 					<show id="sec:readGroups" force="true" />
 					<show id="bcpg:erpCode" force="true" />
 					<show id="bcpg:isDeleted" />
 				</field-visibility>
+				<appearance>
+					<field id="bcpg:toxAbsorptionType" set="toxTab" >
+						<control template="/org/alfresco/components/form/controls/selectone.ftl" />
+					</field>
+				</appearance>
 			</form>
 		</forms>
 	</config>
@@ -1905,6 +1917,7 @@
 					<show id="bcpg:svhcReasonsForInclusion" force="true" />
 					<show id="bcpg:ingToxPodSystemic" force="true" />
 					<show id="bcpg:ingToxDermalAbsorption" force="true" />
+					<show id="bcpg:ingToxOralAbsorption" force="true" />
 					<show id="bcpg:ingToxMosMoe" force="true" />
 					<show id="bcpg:ingToxMaxSkinIrritationRinseOff" force="true" />
 					<show id="bcpg:ingToxMaxSkinIrritationLeaveOn" force="true" />
@@ -1974,6 +1987,7 @@
 					<field id="bcpg:svhcReasonsForInclusion" set="formulation" />
 					<field id="bcpg:ingToxPodSystemic" set="toxTab" />
 					<field id="bcpg:ingToxDermalAbsorption" set="toxTab" />
+					<field id="bcpg:ingToxOralAbsorption" set="toxTab" />
 					<field id="bcpg:ingToxMosMoe" set="toxTab" />
 					<field id="bcpg:ingToxMaxSkinIrritationRinseOff" set="toxTab" />
 					<field id="bcpg:ingToxMaxSkinIrritationLeaveOn" set="toxTab" />
@@ -2226,6 +2240,7 @@
 					<show id="bcpg:svhcReasonsForInclusion" force="true" />
 					<show id="bcpg:ingToxPodSystemic" force="true" />
 					<show id="bcpg:ingToxDermalAbsorption" force="true" />
+					<show id="bcpg:ingToxOralAbsorption" force="true" />
 					<show id="bcpg:ingToxMosMoe" force="true" />
 					<show id="bcpg:ingToxMaxSkinIrritationRinseOff" force="true" />
 					<show id="bcpg:ingToxMaxSkinIrritationLeaveOn" force="true" />
@@ -2296,6 +2311,7 @@
 					<field id="bcpg:svhcReasonsForInclusion" set="formulation" />
 					<field id="bcpg:ingToxPodSystemic" set="toxTab" />
 					<field id="bcpg:ingToxDermalAbsorption" set="toxTab" />
+					<field id="bcpg:ingToxOralAbsorption" set="toxTab" />
 					<field id="bcpg:ingToxMosMoe" set="toxTab" />
 					<field id="bcpg:ingToxMaxSkinIrritationRinseOff" set="toxTab" />
 					<field id="bcpg:ingToxMaxSkinIrritationLeaveOn" set="toxTab" />
@@ -2332,6 +2348,7 @@
 					<show id="bcpg:svhcReasonsForInclusion" force="true" />
 					<show id="bcpg:ingToxPodSystemic" force="true" />
 					<show id="bcpg:ingToxDermalAbsorption" force="true" />
+					<show id="bcpg:ingToxOralAbsorption" force="true" />
 					<show id="bcpg:ingToxMosMoe" force="true" />
 					<show id="bcpg:ingToxMaxSkinIrritationRinseOff" force="true" />
 					<show id="bcpg:ingToxMaxSkinIrritationLeaveOn" force="true" />
@@ -2401,6 +2418,7 @@
 					<field id="bcpg:svhcReasonsForInclusion" set="formulation" />
 					<field id="bcpg:ingToxPodSystemic" set="toxTab" />
 					<field id="bcpg:ingToxDermalAbsorption" set="toxTab" />
+					<field id="bcpg:ingToxOralAbsorption" set="toxTab" />
 					<field id="bcpg:ingToxMosMoe" set="toxTab" />
 					<field id="bcpg:ingToxMaxSkinIrritationRinseOff" set="toxTab" />
 					<field id="bcpg:ingToxMaxSkinIrritationLeaveOn" set="toxTab" />
