--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-pack-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-pack-form-config.xml
@@ -257,6 +257,21 @@
 				</appearance>
 			</form>
 			
+			<form id="customListDatagrid">
+                <field-visibility>
+                    <show id="pack:pmlLevel" />
+                    <show id="pack:pmlMaterial" />
+                    <show id="pack:pmlPerc" />
+                    <show id="pack:pmlWeight" />
+                    <show id="pack:pmlRecycledPercentage" />    
+                    <show id="fm:commentCount" force="true" />
+                </field-visibility>
+                <appearance>
+                    <field id="pack:pmlLevel"  read-only="true" />
+                    <field id="fm:commentCount" label="hidden" read-only="true" />
+                </appearance>
+            </form>
+			
 			
 			<form id="filter">
 				<field-visibility>
