Fix #19868 - [Bug] Add isDeleted and readGroups to pack material

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-pack-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-pack-form-config.xml
@@ -326,6 +326,8 @@
 					<show id="pack:pmEcoTaxeCategory" />
 					<show id="pack:pmEcoScore" />
 					<show id="pack:pmIsNotRecyclable" />
+					<show id="sec:readGroups" force="true" />
+					<show id="bcpg:isDeleted" force="true"/>
 				</field-visibility>
 			</form>
 		</forms>
@@ -341,6 +343,8 @@
 					<show id="pack:pmEcoTaxeCategory" />
 					<show id="pack:pmEcoScore" />
 					<show id="pack:pmIsNotRecyclable" />
+					<show id="sec:readGroups" force="true" />
+					<show id="bcpg:isDeleted" force="true" />
 				</field-visibility>
 			</form>
 
@@ -359,6 +363,8 @@
 					<show id="pack:pmEcoTaxeCategory" />
 					<show id="pack:pmEcoScore" />
 					<show id="pack:pmIsNotRecyclable" />
+					<show id="sec:readGroups" force="true" />
+					<show id="bcpg:isDeleted" force="true" />
 				</field-visibility>
 			</form>
 		</forms>
