Fix #25376 - [Feature] Added w-used form for qa:batch

--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-quality-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-quality-form-config.xml
@@ -342,7 +342,17 @@
 					</field>
 				</appearance>
 			</form>
-
+			<form id="datagridWUsed">
+          		<field-visibility>
+					<show id="cm:name" />
+					<show id="qa:batchState"/>
+					<show id="qa:batchQty"/>
+					<show id="qa:batchQtyUnit"/>
+                    <show id="bcpg:laboratories" force="true" />
+					<show id="cm:creator" for-mode="view" />
+					<show id="cm:created" for-mode="view" />
+          		</field-visibility>
+     		</form>
 		</forms>
 	</config>
 
